# ECM2433

./: CMakeLists.txt  README.md
Question1/: CMakeLists.txt  Makefile  main  main.c  pig.c  pig.h  piglatin.c  piglatin.h  piglatin_header.h  test_pig.c  test_pig.h  test_pig_header.h
Question2/: Makefile  demo  demo_shuffle.c  demo_shuffle.h  main  quality  quality.c  quality.h  quality.txt  riffle.c  riffle.h
Question3/: CMakeLists.txt  Makefile  beggar.c  beggar.h  byn.c  byn.h  main  main.c  shuffle.c  shuffle.h  single.c  single.h  statistics.txt
Question3/old/: main.c
